duniverse/menhirLib.20200211/test/static/bad/a-rule-is-expected.mly
(* The percentpercent sign is misplaced; it comes too early. *)

%%

%start<int> main
%token A

main:
  A { 0 }
