duniverse/menhirLib.20200211/test/static/bad/a-rule-is-expected.exp
File "a-rule-is-expected.mly", line 5, characters 0-6:
Error: syntax error after '%%' and before '%start'.
A rule is expected at this point.
